Add privicy policy, add some information and frontend to developer info view

--- a/Web/CarShop.Web/Views/Cars/All.cshtml
+++ b/Web/CarShop.Web/Views/Cars/All.cshtml
@@ -12,7 +12,7 @@
 
 <h1>@this.ViewData["Title"]</h1>
 <hr />
-<div class="row">
+<div class="row" style="display: flex; justify-content: space-between;">
     @foreach (var car in Model.Cars)
     {
         <div class="card col-md-4" style="width: 18rem">
