Add some data, fix bugs in all view, add all marks of cars

--- a/Web/CarShop.Web/Views/Cars/All.cshtml
+++ b/Web/CarShop.Web/Views/Cars/All.cshtml
@@ -12,18 +12,18 @@
 
 <h1>@this.ViewData["Title"]</h1>
 <hr />
-<div class="row" style="display: flex; justify-content: space-between;">
+<div class="row" style="display: flex; justify-content:space-between;">
     @foreach (var car in Model.Cars)
     {
-        <div class="card col-md-4" style="width: 18rem">
+        <div class="card col-md-4" style="width: 16rem">
             <img src="@car.ImageUrl" class="card-img-top" style="padding-top:10px" alt="Car picture: @car.MarkName">
             <div class="card-body">
                 <h5 class="card-title"><strong>@car.MarkName</strong></h5>
-                <span><strong>@car.Price BGN</strong></span>
-                <span>@car.RegionName</span>
-                <span>@car.Milage Km</span>
+                <span><strong>Price:</strong> @car.Price BGN</span><br>
+                <span><strong>Location:</strong> @car.RegionName</span><br>
+                <span><strong>Milage:</strong> @car.Milage Km</span><br>
                 <hr>
-                <p class="card-text">@car.Description.Substring(0, 85)...</p>
+                <p class="card-text">@car.Description.Substring(0, 50)...</p>
                 <a asp-action="ById" asp-route-id="@car.Id" class="btn btn-primary">Show more</a>
             </div>
         </div>
