Add tax controller, view, add calcullatror for tax in JS

--- a/Web/CarShop.Web/Views/Home/Index.cshtml
+++ b/Web/CarShop.Web/Views/Home/Index.cshtml
@@ -9,3 +9,7 @@
     <p>We have @Model.CarCount cars!</p>
     <p>We have @Model.MarkCount marks!</p>
 </div>
+
+<li class="btn btn-info">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Tax" asp-action="Calculator">Tax calculator</a>
+</li>
