Add some changes in the views to looks more stylish

--- a/Web/CarShop.Web/Views/Cars/Create.cshtml
+++ b/Web/CarShop.Web/Views/Cars/Create.cshtml
@@ -233,7 +233,7 @@
         <span asp-validation-for="Year" class="text-danger"></span>
     </div>
     <hr />
-    <input type="submit" as class="btn btn-primary" />
+    <input type="submit" as class="btn btn-primary" value="Create"/>
 </form>
 
 <script>
