--- a/Web/CarShop.Web/Views/Marketing/All.cshtml
+++ b/Web/CarShop.Web/Views/Marketing/All.cshtml
@@ -14,7 +14,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 }
-<h1>List of all marketing emails: @Model.Marketings.Count()</h1>
+<h1>History of all marketing emails: @Model.Marketings.Count()</h1>
 <hr>
 <ol>
     @foreach (var marketing in Model.Marketings)
