--- a/Web/CarShop.Web/Views/Cars/ById.cshtml
+++ b/Web/CarShop.Web/Views/Cars/ById.cshtml
@@ -7,7 +7,13 @@
 <span><strong>Created on: &#128467; Date: </strong> @Model.CreatedOn.ToShortDateString() <strong>&#128346; Time:  </strong> @Model.CreatedOn.ToShortTimeString() </span>
 
 <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#DeleteCar">Delete</button> 
-<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#EditCar">Edit</button>
+<button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#EditCar">Edit</button>
+<button type="button" class="btn btn-info" onclick="window.print()">Print this page</button>
+<span><strong> | I don't have enough money, I need credit -> </strong></span>
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+    Credit
+</button>
+
 <form asp-action="Delete" asp-route-id="@Model.Id" id="DeleteCheckModal"></form>
 <form asp-action="Edit" asp-route-id="@Model.Id" id="EditCheckModal"></form>
 <hr>
@@ -18,7 +24,21 @@
         </div>
     </div>
 </div>
-
+<hr>
+<div class="accordion" id="accordionDescription">
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                <strong>Description:</strong>
+            </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionDescription">
+            <div class="accordion-body">
+                @Model.Description
+            </div>
+        </div>
+    </div>
+</div>
 <hr>
 <div class="col-md-4">
     <table class="table table-striped table-bordered">
@@ -60,20 +80,7 @@
         </tbody>
     </table>
 </div>
-<div class="accordion" id="accordionDescription">
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                <strong>Description:</strong>
-            </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionDescription">
-            <div class="accordion-body">
-                @Model.Description
-            </div>
-        </div>
-    </div>
-</div>
+
 <hr>
 <div class="col-md-4">
     <ul class="list-group">
@@ -84,9 +91,7 @@
     </ul>
 </div>
 <hr>
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-    I don't have enough money
-</button>
+
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -108,8 +113,6 @@
         </div>
     </div>
 </div>
-<!-- Printing-->
-<button type="button" class="btn btn-info" onclick="window.print()">Print this page</button>
 <!-- Modal DeleteCar for confirmation window -->
 <div class="modal" tabindex="-1" id="DeleteCar">
     <div class="modal-dialog">
@@ -133,15 +136,15 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete Post</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Edit Post</h5>
                 <hr>
             </div>
             <div class="modal-body">
-                Do you want to delete "" post?
+                Do you want to edit "@Model.MarkName" post?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                <button type="button" class="btn btn-danger" onclick="deletePost.submit()">Delete Post &#10060</button>
+                <button type="button" class="btn btn-danger" onclick="deletePost.submit()">Edit Post &#10060</button>
             </div>
         </div>
     </div>
@@ -176,7 +179,7 @@ else
 @foreach (var comment in Model.Comments.ToList().OrderByDescending(x => x.CreatedOn))
 {
     <div class="card">
-        <div class="card-header" style="background-color:cadetblue">
+        <div class="card-header" style="background-color: deepskyblue">
             <strong>@comment.UserUserName</strong>
         </div>
         <div class="card-body">
