--- a/Web/CarShop.Web/Views/Tax/Calculator.cshtml
+++ b/Web/CarShop.Web/Views/Tax/Calculator.cshtml
@@ -2,15 +2,20 @@
 @{
     this.ViewData["Title"] = "Tax calculator";
 }
-<h1>@ViewData["Title"]</h1>
 
-<form id="adder" onsubmit="return add();">
+
+<form class="col-md-6 offset-md-3" id="adder"  onsubmit="return add();">
+    <h1>@ViewData["Title"]</h1>
+    <hr>
+    <h3>NEW! Now you can check your taxes!</h3>
+    <p>Fill the form with the right information, then click on the "<strong>Calcolate Tax</strong>" button.</p>
+    <p>If you want to calculate again, click on "Clear Tax Result" button.</p>
     <div class="form-control c" style="border:solid;">
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">Value</th>
-
+                    <th scope="col">Tax form</th>
+                    <td>1.0v</td>
                 </tr>
             </thead>
             <tbody>
@@ -23,10 +28,10 @@
                     <td>
                         <select class="form-select" aria-label="Default select example">
                             <option value="2.3" id="ageOfCar">Less than 5 years</option>
-                            <option value="1.5" id="ageOfCar">5 to 10</option>
-                            <option value="1.3" id="ageOfCar">10 to 15</option>
-                            <option value="1.0" id="ageOfCar">15 to 20</option>
-                            <option value="1.1" id="ageOfCar">More than 20</option>
+                            <option value="1.5" id="ageOfCar">5 to 10 years</option>
+                            <option value="1.3" id="ageOfCar">10 to 15 years</option>
+                            <option value="1.0" id="ageOfCar">15 to 20 years</option>
+                            <option value="1.1" id="ageOfCar">More than 20 years</option>
                         </select>
                     </td>
                 </tr>
@@ -45,9 +50,11 @@
             </tbody>
         </table>
     </div>
-    <button class="btn btn-primary" id="calc" type="button">Calculate Tax</button>
-    <input type="text" name="num3" id="result" readonly placeholder="Result">
-    <button class="btn btn-danger" type="button" id="btn">Clear</button>
+    <hr>
+    <button class="btn btn-primary" id="calc" type="button">Calculate Tax</button> | 
+    <input type="text" name="num3" id="result" readonly placeholder="Tax Result"> <span> | BGN</span>
+    <hr>
+    <button class="btn btn-danger" type="button" id="btn">Clear Tax Result</button>
 </form>
 <script>
     const btn = document.getElementById('btn');
