Extend search witt millage, region, fix the engine, add some frontend

--- a/Web/CarShop.Web/Views/Cars/Create.cshtml
+++ b/Web/CarShop.Web/Views/Cars/Create.cshtml
@@ -4,7 +4,7 @@
 }
 <h1>Add new car post!</h1>
 <hr>
-<h5>Fill all the fields, then click on <strong>"Create"</strong> button.</br> If some data is invalid there will be messages but don't panic, it's all organic.</h2>
+<h5>Fill all the fields, then click on <strong>"Create"</strong> button.<br> If some data is invalid there will be messages but don't panic, it's all organic.</h5>
 <form method="post" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="row">
