--- a/Web/CarShop.Web/Views/Search/Index.cshtml
+++ b/Web/CarShop.Web/Views/Search/Index.cshtml
@@ -87,7 +87,7 @@
                     <li>Click on the button "Search"</li>
                 </ol>
                 <p>Maybe some ads here</p>
-                <img width="600" height="290" src="https://cdn1.efbet.com/efbet/landingpage/images/Landing_obsh_bonusite%20sa%20vajni.png"></img>
+                <img width="600" height="290" src="https://cdn1.efbet.com/efbet/landingpage/images/Landing_obsh_bonusite%20sa%20vajni.png"/>
             </div>
         </div>
     </div>
