--- a/Web/CarShop.Web/Views/Cars/Create.cshtml
+++ b/Web/CarShop.Web/Views/Cars/Create.cshtml
@@ -80,7 +80,7 @@
                             <option value="64">Kia</option>
                             <option value="65">Lada</option>
                             <option value="66">Laforza</option>
-                            <option value="67">Lamborghini</option>
+                            <option value="1445">Lamborghini</option>
                             <option value="68">Lancia</option>
                             <option value="69">Land Rover</option>
                             <option value="70">Landwind</option>
@@ -169,6 +169,11 @@
                         <label asp-for="IsUsed">Used</label>
                         <input type="checkbox" asp-for="IsUsed" />
                         <span asp-validation-for="IsUsed" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Color">Color of the car </label>
+                        <input type="color" asp-for="Color" value="" />
+                        <span asp-validation-for="Color" class="text-danger"></span>
                     </div>
                 </div>
             </div>
