--- a/Web/CarShop.Web/Views/Cars/Create.cshtml
+++ b/Web/CarShop.Web/Views/Cars/Create.cshtml
@@ -275,6 +275,11 @@
                         <input type="checkbox" class="ticketAddition" name="Third-row seating" value="Third-row seating"> Third-row seating<br>
                         <input type="checkbox" class="ticketAddition" name="Apple CarPlay/Android Auto" value="Apple CarPlay/Android Auto"> Apple CarPlay/Android Auto<br>
                     </div>
+                    <div class="form-group">
+                        <label asp-for="Extras"></label>
+                        <input asp-for="Extras" id="InputString" value="names" class="form-control" />
+                        <span asp-validation-for="Extras" class="text-danger"></span>
+                    </div>
                     <br>
                     <input type="submit" as class="btn btn-primary btn-sm" value="Create" />
                 </div>
@@ -291,6 +296,8 @@
             }).get();
 
             console.log(names)
+
+            document.getElementById('InputString').value = names.toString();
         });
 
         imgInp.onchange = evt => {
