--- a/Web/CarShop.Web/Views/Cars/ById.cshtml
+++ b/Web/CarShop.Web/Views/Cars/ById.cshtml
@@ -34,80 +34,126 @@ else
     </div>
 </div>
 <hr>
-<div class="accordion" id="accordionDescription">
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                <strong>Description:</strong>
-            </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionDescription">
-            <div class="accordion-body">
-                @Model.Description
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <table class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col"><strong>Parameter</strong></th>
+                        <th scope="col"><strong>Data</strong></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Mark:</td>
+                        <td>@Model.MarkName</td>
+                    </tr>
+                    <tr>
+                        <td>Region:</td>
+                        <td>@Model.RegionName</td>
+                    </tr>
+                    <tr>
+                        <td>Milage:</td>
+                        <td>@Model.Milage</td>
+                    </tr>
+                    <tr>
+                        <td>Year:</td>
+                        <td>@Model.Year</td>
+                    </tr>
+                    <tr>
+                        <td>Price:</td>
+                        <td>@Model.Price BGN</td>
+                    </tr>
+                    <tr>
+                        <td>Engine:</td>
+                        <td>@Model.EngineType</td>
+                    </tr>
+                    <tr>
+                        <td>Transmission:</td>
+                        <td>@Model.TransmissionType</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-sm">
+            <div class="accordion" id="accordionDescription">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="tr" aria-controls="collapseOne">
+                            <strong>Description:</strong>
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionDescription">
+                        <div class="accordion-body">
+                            @Model.Description
+                            <hr>
+                            <span><strong>Features: </strong></span>
+                            @if (Model.Features != null)
+                            {
+                                @foreach (var featur in Model.Features.Split(',').ToList())
+                                {
+                                    <span><strong>&#9989; @featur </strong></span>
+                                }
+                            }
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+        <div class="col-sm">
+            <ul class="list-group">
+                <li class="list-group-item active" aria-current="true">Contacts of the saler:</li>
+                <li class="list-group-item">Name: @Model.CreatedByUserUserName</li>
+                <li class="list-group-item">Email: <a href=mailto:"@Model.Email">@Model.Email</a></li>
+                <li class="list-group-item">Telefon number: <button class="btn btn-primary btn-sm" onclick="showAndHide()">Show number</button> <a style="display:none" id="TelNum" href="tel:@Model.TelephoneNumber">@Model.TelephoneNumber</a></li>
+            </ul>
         </div>
     </div>
 </div>
 <hr>
-<div class="col-md-4">
-    <table class="table table-striped table-bordered">
-        <thead>
-            <tr>
-                <th scope="col"><strong>Parameter</strong></th>
-                <th scope="col"><strong>Data</strong></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Mark:</td>
-                <td>@Model.MarkName</td>
-            </tr>
-            <tr>
-                <td>Region:</td>
-                <td>@Model.RegionName</td>
-            </tr>
-            <tr>
-                <td>Milage:</td>
-                <td>@Model.Milage</td>
-            </tr>
-            <tr>
-                <td>Year:</td>
-                <td>@Model.Year</td>
-            </tr>
-            <tr>
-                <td>Price:</td>
-                <td>@Model.Price BGN</td>
-            </tr>
-            <tr>
-                <td>Engine:</td>
-                <td>@Model.EngineType</td>
-            </tr>
-            <tr>
-                <td>Transmission:</td>
-                <td>@Model.TransmissionType</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-
-<hr>
-<div class="col-md-4">
-    <ul class="list-group">
-        <li class="list-group-item active" aria-current="true">Contacts of the saler:</li>
-        <li class="list-group-item">Name: @Model.CreatedByUserUserName</li>
-        <li class="list-group-item">Email: <a href=mailto:"@Model.Email">@Model.Email</a></li>
-        <li class="list-group-item">Telefon number: <button class="btn btn-primary btn-sm" onclick="showAndHide()">Show number</button> <a style="display:none" id="TelNum" href="tel:@Model.TelephoneNumber">@Model.TelephoneNumber</a></li>
-    </ul>
-</div>
-<hr>
-<span><strong>Features: </strong></span>
-@if (Model.Features != null)
+<!-- COMMENTS SECTION -->
+@if (Model.Comments.Count() < 1)
 {
-    @foreach (var featur in Model.Features.Split(',').ToList())
-    {
-        <span><strong>&#9989; @featur </strong></span>
-    }
+    <span><strong>No comments yet:</strong></span>
 }
+else
+{
+    <span><strong>Comments: @Model.Comments.Count()</strong></span>
+}
+
+<div>
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <form asp-controller="Comments" asp-action="Create" method="post" id="AddCommentForm" style="display: block">
+        <input type="hidden" name="CarId" value="@Model.Id" />
+        <div>
+            <label for="Content"></label>
+            <textarea name="Content" id="Content" class="form-control" placeholder="Write your comment here."></textarea>
+        </div>
+        <hr>
+        <div>
+            <input type="submit" class="btn btn-primary" value="Add comment" />
+        </div>
+    </form>
+</div>
+<hr>
+@foreach (var comment in Model.Comments.ToList().OrderByDescending(x => x.CreatedOn))
+{
+    <div class="card">
+        <div class="card-header" style="background-color: deepskyblue">
+            <strong>@comment.UserUserName</strong>
+        </div>
+        <div class="card-body">
+            <blockquote class="blockquote mb-0">
+                <p>@comment.Content</p>
+                <footer class="blockquote-footer">@comment.CreatedOn.ToShortDateString() | @comment.CreatedOn.ToShortTimeString()</footer>
+            </blockquote>
+            <button type="button" class="btn btn-primary">Reply to this comment</button>
+        </div>
+        <hr>
+    </div>
+}
+<!-- Modal Credit (loan) -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -165,49 +211,6 @@ else
         </div>
     </div>
 </div>
-<!-- COMMENTS SECTION -->
-<hr>
-@if (Model.Comments.Count() < 1)
-{
-    <span><strong>No comments yet:</strong></span>
-}
-else
-{
-    <span><strong>Comments: @Model.Comments.Count()</strong></span>
-}
-
-<div>
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <form asp-controller="Comments" asp-action="Create" method="post" id="AddCommentForm" style="display: block">
-        <input type="hidden" name="CarId" value="@Model.Id" />
-        <div>
-            <label for="Content"></label>
-            <textarea name="Content" id="Content" class="form-control" placeholder="Write your comment here."></textarea>
-        </div>
-        <hr>
-        <div>
-            <input type="submit" class="btn btn-primary" value="Add comment" />
-        </div>
-    </form>
-</div>
-<hr>
-
-@foreach (var comment in Model.Comments.ToList().OrderByDescending(x => x.CreatedOn))
-{
-    <div class="card">
-        <div class="card-header" style="background-color: deepskyblue">
-            <strong>@comment.UserUserName</strong>
-        </div>
-        <div class="card-body">
-            <blockquote class="blockquote mb-0">
-                <p>@comment.Content</p>
-                <footer class="blockquote-footer">@comment.CreatedOn.ToShortDateString() | @comment.CreatedOn.ToShortTimeString()</footer>
-            </blockquote>
-            <button type="button" class="btn btn-primary">Reply to this comment</button>
-        </div>
-        <hr>
-    </div>
-}
 
 @section Scripts {
     <script>
