--- a/Web/CarShop.Web/Views/Cars/ById.cshtml
+++ b/Web/CarShop.Web/Views/Cars/ById.cshtml
@@ -80,7 +80,7 @@ else
             <div class="accordion" id="accordionDescription">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="tr" aria-controls="collapseOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             <strong>Description:</strong>
                         </button>
                     </h2>
