Add point view model, add controller logic for points action

--- a/Web/CarShop.Web/Views/Shop/Points.cshtml
+++ b/Web/CarShop.Web/Views/Shop/Points.cshtml
@@ -1,21 +1,26 @@
-﻿@{
+﻿@model CarShop.Web.ViewModels.Shop.ByIdPointsViewModel
+@{
     this.ViewData["Title"] = "My points";
 }
 <h1>@this.ViewData["Title"]</h1>
-<h2>You have 0 points!</h2>
+<h2>You have <strong><b>@Model.PointsCount</b></strong> points &#9889; </h2>
 <br>
-<p><strong><b>What are Points?</b></strong> Points are like online curency, you can use them for buying items in our shop.(<b>Point</b> are <b>NOT</b> real curency, you can <b>only</b> use them in this site!)</p>
+<h5><strong><b>What are Points?</b></strong> Points are like online curency, you can use them for buying items in our shop.(<b>Point</b> are <b>NOT</b> real curency, you can <b>only</b> use them in this site!)</h5>
 <hr>
-<p>
-    <strong><b>How to get points?</b></strong> Fore every approved car post you make, you will get 1 point. >>>>TODO Add link here! for creating new CAR
-</p>
+<h5>
+    <strong><b>How to get points?</b></strong> Fore every approved car post you make, you will get 1 point.
+</h5>
 <nav>
-    <a class="btn btn-primary btn-lg" asp-area="" asp-controller="AAAAA" asp-action="A">Go shoping</a>
+    <a class="btn btn-primary btn-lg" asp-area="" asp-controller="Cars" asp-action="Create">Add Car</a> <span><strong><b>+1 point &#9889;</b></strong></span>
+</nav>
+<div class="container text-center">
+    <iframe class="align-content-center" src="https://localhost:44319/Cars/Create" width="800" height="400"></iframe>
+</div>
+<hr>
+<h5>
+    <strong><b>How to use my points?</b></strong> Check our <b>shop</b>, check the items there, if you want to buy some item and you have enough points click on <b>BUY</b>. If the button is disabled it means that you don't have enough points to buy this item!
+</h5>
+<nav>
+    <a class="btn btn-primary btn-lg" asp-area="" asp-controller="Shop" asp-action="All">Go Shoping</a> <span><strong><b>Buy items that cost less or equal @Model.PointsCount &#9889;</b></strong></span>
 </nav>
 <hr>
-<p>
-    <strong>How to use my points?</strong> Check our <b>shop</b>, check the items there, if you want to buy some item and you have enough points click on <b>BUY</b>. If the button is disabled it means that you don't have enough points to buy this item!
-</p>
-<nav>
-    <a class="btn btn-primary btn-lg" asp-area="" asp-controller="Shop" asp-action="All">Go shoping</a>
-</nav>
