--- a/Web/CarShop.Web/Views/Shop/Points.cshtml
+++ b/Web/CarShop.Web/Views/Shop/Points.cshtml
@@ -3,7 +3,7 @@
     this.ViewData["Title"] = "My points";
 }
 <h1>@this.ViewData["Title"]</h1>
-<h2>You have <strong><b>@Model.PointsCount</b></strong> points &#9889; </h2>
+<h2>@Model.UserName you have <strong><b>@Model.PointsCount</b></strong> points &#9889; </h2>
 <br>
 <h5><strong><b>What are Points?</b></strong> Points are like online curency, you can use them for buying items in our shop.(<b>Point</b> are <b>NOT</b> real curency, you can <b>only</b> use them in this site!)</h5>
 <hr>
