--- a/Web/CarShop.Web/Views/Shop/Add.cshtml
+++ b/Web/CarShop.Web/Views/Shop/Add.cshtml
@@ -1,9 +1,31 @@
-﻿@{
+﻿@model CarShop.Web.ViewModels.Shop.AddItemShopInputModel
+@{
     this.ViewData["Title"] = "Add items";
 }
 <h1>@this.ViewData["Title"]</h1>
 <p>Fill the form to add new item for sale in the shop.</p>
 <form>
-    
-
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="Name"></label>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Description"></label>
+        <textarea asp-for="Description" class="form-control" rows="3"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Price"></label>
+        <input asp-for="Price" class="form-control" />
+        <span asp-validation-for="Price" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Image"></label>
+        <input asp-for="Image" class="form-control" accept="image/*" id="imgInp" />
+        <span asp-validation-for="Image" class="text-danger"></span>
+    </div>
+    <br>
+    <input type="submit" class="btn btn-primary btn-sm" value="Add" />
 </form>
